objects/ssot__ImpactStrategy__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Impact Strategy Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ImpactStrategyCategory__c</fullName>
        <label>Impact Strategy Category</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Level__c</fullName>
        <label>Level</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParentImpactStrategyId__c</fullName>
        <label>Parent Impact Strategy</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Status__c</fullName>
        <label>Status</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Type__c</fullName>
        <label>Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716668782570_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ImpactStrategy_ParentImpactStrategyI_rel</label>
        <referenceTo>ssot__ImpactStrategy__dlm</referenceTo>
        <relationshipLabel>ImpactStrategy_ParentImpactStrategyI_rel</relationshipLabel>
        <relationshipName>rel_1716668782570_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>